[gd_scene load_steps=4 format=3 uid="uid://ddba0mf83ndc5"]

[ext_resource type="Texture2D" uid="uid://dthk1pr1xe8dm" path="res://assets/UI/TopToggleButton.png" id="1_2a1vu"]
[ext_resource type="Script" path="res://text_pullup.gd" id="1_27ggx"]
[ext_resource type="Texture2D" uid="uid://c18lrcn8qyr54" path="res://assets/UI/MenuPullup.png" id="2_q8lyr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -314.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_27ggx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 281.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("1_2a1vu")
ignore_texture_size = true
stretch_mode = 0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_q8lyr")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/NinePatchRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
text = "Enter Prompt"

[node name="LineEdit" type="TextEdit" parent="VBoxContainer/NinePatchRect"]
layout_mode = 0
offset_left = 3.0
offset_top = 35.0
offset_right = 1145.0
offset_bottom = 222.0
caret_blink = true

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_left = 528.0
offset_top = 546.0
offset_right = 623.0
offset_bottom = 590.0
size_flags_horizontal = 4
text = "Enter"

[connection signal="get_prompt" from="." to="." method="_on_get_prompt"]
[connection signal="pressed" from="VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
